--- a/media query/index.html
+++ b/media query/index.html
@@ -61,6 +61,9 @@
         .box{
             background-color: green;
         }
+        h1{
+            text-align: center;
+        }
       }
     </style>
   </head>
@@ -71,5 +74,6 @@
       <div class="box">3</div>
       <div class="box">4</div>
     </div>
+    <h1>Hello world</h1>
   </body>
 </html>
